--- a/DDVideoPlayer/Podfile
+++ b/DDVideoPlayer/Podfile
@@ -8,6 +8,7 @@ target 'DDVideoPlayer' do
   # Pods for DDVideoPlayer
 
   pod 'Masonry'
+  pod 'SnapKit'
 
   target 'DDVideoPlayerTests' do
     inherit! :search_paths
