--- a/DDPlayerProject/Podfile
+++ b/DDPlayerProject/Podfile
@@ -11,6 +11,7 @@ target 'DDPlayerProject' do
 
   pod 'Masonry'
   pod 'SDWebImage'
+  pod 'Reachability'
 
   target 'DDPlayerProjectTests' do
     inherit! :search_paths
